--- a/.env.example
+++ b/.env.example
@@ -7,5 +7,5 @@ DB_CONNECTION=mysql
 MYSQL_HOST=localhost
 MYSQL_PORT=3306
 MYSQL_USER=lucid
-MYSQL_PASSWORD=
-MYSQL_DB_NAME=lucid
+MYSQL_PASSWORD=123456
+MYSQL_DB_NAME=ounjez
